# music-visualizer

./: .clang-format  .gitmodules  Application.cpp  Application.h  CMakeLists.txt  Error.cpp  Error.h  FFT.cpp  FFT.h  FloatDataView.cpp  FloatDataView.h  FrameBuffer.cpp  FrameBuffer.h  GUI.cpp  GUI.h  Graph.cpp  Graph.h  IndexBuffer.cpp  IndexBuffer.h  Music.cpp  Music.h  NodeEditor.cpp  NodeEditor.h  NodeGraph.cpp  NodeGraph.h  OpenGLRendererAPI.cpp  OpenGLRendererAPI.h  PerlinNoise.cpp  PerlinNoise.h  README.md  Rectangle.cpp  Rectangle.h  RenderCommand.cpp  RenderCommand.h  Renderer.cpp  Renderer.h  RendererAPI.cpp  RendererAPI.h  Shader.cpp  Shader.h  (+21 more)
.github/workflows/: cmake-multi-platform.yml
assets/shaders/: fbm-2d-frag.glsl  fbm-funny-liquid.glsl  fragment-shader.glsl  noise-fragment-shader.glsl  smoke-fragment-shader.glsl  vertex-shader.glsl
c/: CMakeLists.txt  application.c  application.h  main.c  renderer.c  renderer.h  window.c  window.h
c/renderer/: index_buffer.c  index_buffer.h  renderer.c  renderer.h  shader.c  shader.h  vertex_array.c  vertex_array.h  vertex_buffer.c  vertex_buffer.h  window.c  window.h
include/: Window.cpp  Window.h
